# oop_labs

./: .gitignore
lab1/: CMakeLists.txt  README.md  main.cpp
lab1/gtests/: tests01.cpp
lab1/include/: ClockConverter.h
lab1/src/: ClockConverter.cpp
lab2/: CMakeLists.txt  README.md  main.cpp
lab2/gtests/: tests02.cpp
lab2/include/: Three.h
lab2/src/: Three.cpp
lab3/: CMakeLists.txt  README.md  main.cpp
lab3/gtests/: tests03.cpp
lab3/include/: figure.h  figurearray.h  rectangle.h  square.h  triangle.h  vertex.h
lab3/src/: figurearray.cpp  rectangle.cpp  square.cpp  triangle.cpp  vertex.cpp
lab4/: CMakeLists.txt  README.md  main.cpp
lab4/gtests/: tests04.cpp
lab4/include/: figure.h  figurearray.h  rectangle.h  square.h  triangle.h  vertex.h
lab5/: CMakeLists.txt  README.md  main.cpp
lab5/gtests/: tests05.cpp
lab5/include/: memoryResource.h  queue.h
lab5/src/: memoryResource.cpp
lab6/: CMakeLists.txt  README.md  log.txt  main.cpp  npc.txt
lab6/gtests/: tests06.cpp
lab6/include/: dragon.h  factory.h  frog.h  knight.h  npc.h  observer.h  utils.h  visitor.h
lab6/src/: dragon.cpp  frog.cpp  knight.cpp  npc.cpp  utils.cpp
lab7/: CMakeLists.txt  README.md  log.txt  main.cpp
lab7/config/: field.json  npc_properties.json
lab7/gtests/: tests07.cpp
lab7/include/configs/: field_configs.hpp  npc_properties_configs.hpp
lab7/include/factories/: factories.hpp
lab7/include/game/: fight_manager.hpp  game.hpp  game_state.hpp  move_manager.hpp  print_manager.hpp  world_configurator.hpp
lab7/include/npcs/: dragon.hpp  frog.hpp  knight.hpp  npc.hpp  npc_types.hpp
lab7/include/observers/: observers.hpp
lab7/include/visitors/: attacker_visitors.hpp
lab7/src/configs/: field_configs.cpp  npc_properties_configs.cpp
lab7/src/factories/: factories.cpp
lab7/src/game/: fight_manager.cpp  game.cpp  move_manager.cpp  print_manager.cpp  world_configurator.cpp
lab7/src/npcs/: dragon.cpp  frog.cpp  knight.cpp  npc.cpp
lab7/src/observers/: observers.cpp
lab7/src/visitors/: attacker_visitors.cpp
